<resources>
    <string name="app_name">Countries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="continents">Continent</string>
    <string name="chipAfrica">Africa</string>
    <string name="chipAntarctica">Antarctica</string>
    <string name="chipAsia">Asia</string>
    <string name="chipOceania">Oceania</string>
    <string name="chipEurope">Europe</string>
    <string name="chipNAmerica">North America</string>
    <string name="chipSAmerica">South America</string>
    <string name="chip_all">All</string>
    <string name="retry_to_connect">Try to Connect Again</string>
    <string name="connection_error">IOException occured</string>
    <string name="connection_error_description">You may not have an internet connection. Please check your connection.</string>
    <string name="countries_detail_transition_name">countries_detail</string>
    <string name="save_country">Save</string>
    <string name="clear_from_search_history">Clear</string>
    <string name="clear_country_from_saved_fragment">Clear</string>

    <string name="countryFlag">CountryFlag</string>
    <string name="population">Population</string>
    <string name="officialNames">Official Name</string>
    <string name="populationText">"Population: "</string>
    <string name="intPopulation">Placeholder</string>
    <string name="countryCode">cca2</string>
    <string name="cca2">c2</string>
    <string name="continents_text">"Continent: "</string>
    <string name="subregion">"Subregion: "</string>
    <string name="is_landlocked">"is Landlocked: "</string>
    <string name="capital">"Capital: "</string>
    <string name="demonyms">"Demonyms: "</string>
    <string name="is_independent">"is Independent: "</string>
    <string name="is_un_member">"is UN member: "</string>
    <string name="area">"Area(km²): "</string>
    <string name="currencies">"Currency: "</string>
    <string name="timezones">"Timezones: "</string>
    <string name="traffic">"Traffic Side: "</string>
    <string name="phone_code">"Phone Code: "</string>
    <string name="internet_domain">"Internet Domain: "</string>
    <string name="settings_menu">Settings</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="detail">Detail</string>
    <string name="clear_saved_countries">Clear Saved Countries</string>


</resources>