<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.atakandalkiran.androidcountriesapp.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream"
        android:transitionName="@string/countries_detail_transition_name"
        tools:context=".ui.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@string/detail"
                app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/regular_margin"
            app:cardBackgroundColor="@color/classic_cream"
            app:cardCornerRadius="@dimen/cardview_detail_margin"
            app:cardElevation="@dimen/cardview_detail_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbarLayout"
            app:layout_constraintVertical_bias="0.5">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detailCountryCommon"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_items_margin"
                        android:singleLine="true"
                        android:text="@{viewModel.selectedCountry.name.common}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Placeholder" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detailCountryOfficial"
                        style="?textAppearanceBodySmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_items_margin"
                        android:singleLine="true"
                        android:text="@{viewModel.selectedCountry.name.official}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailCountryCommon"
                        tools:text="Official name" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/detailFlagImage"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_image_size"
                        android:layout_marginTop="@dimen/detail_items_margin"
                        android:contentDescription="@string/countryFlag"
                        app:imageUrl="@{viewModel.selectedCountry}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/detailCountryOfficial" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/detailFragmentRV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailFlagImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>